--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include ':stripe-ui-core'
 include ':stripecardscan'
 include ':stripecardscan-example'
 include ':stripecardscan-tflite'
+include ':stripe-connect'
 include ':wechatpay'
 include ':ml-core:base'
 include ':ml-core:default'
