--- a/maestro/financial-connections/Testmode-Data-TestOauthInstitution-Connected.yaml
+++ b/maestro/financial-connections/Testmode-Data-TestOauthInstitution-Connected.yaml
@@ -4,7 +4,7 @@ tags:
   - edge
   - testmode-data
 ---
-- startRecording: ${'/tmp/test_results/testmode-data-testoauthinstitution-' + new Date().getTime()}
+- startRecording: ${'/tmp/test_results/testmode-data-testoauthinstitution-connected-' + new Date().getTime()}
 - clearState
 - openLink: "stripeconnectionsexample://playground\
     ?experience=FinancialConnections\
@@ -43,6 +43,8 @@ tags:
 - assertVisible: "Your accounts were connected."
 - tapOn:
     id: "done_button"
-- assertVisible: ".*Completed!.*"
-- assertVisible: ".*StripeBank.*"
+- scrollUntilVisible:
+    element:
+      text: ".*Completed!.*"
+    timeout: 60000
 - stopRecording
