--- a/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution-InstantDebits.yaml
+++ b/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution-InstantDebits.yaml
@@ -6,7 +6,7 @@ tags:
 ---
 - startRecording: ${'/tmp/test_results/testmode-paymentintent-testinstitution-instantdebits-' + new Date().getTime()}
 - clearState
-- openLink: stripeconnectionsexample://playground?experience=InstantDebits&flow=PaymentIntent&financial_connections_override_native=native&merchant=networking&financial_connections_test_mode=true&permissions=transactions,payment_method&financial_connections_confirm_intent=false
+- openLink: stripeconnectionsexample://playground?integration_type=Standalone&experience=InstantDebits&flow=PaymentIntent&financial_connections_override_native=native&merchant=networking&financial_connections_test_mode=true&permissions=transactions,payment_method&financial_connections_confirm_intent=false
 - tapOn:
     id: "Customer email setting"
 - inputRandomEmail
