--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,5 +25,5 @@
 /financial-connections-example/ @stripe/android-connections-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
 
 # Stripe Connect SDK
-/stripe-connect/ @stripe/android-connections-reviewers @stripe/mx-mobile-reviewers @stripe/android-sdk-non-core-reviewers
-/stripe-connect-example/ @stripe/android-connections-reviewers @stripe/mx-mobile-reviewers @stripe/android-sdk-non-core-reviewers
+/stripe-connect/ @stripe/mx-mobile-reviewers
+/stripe-connect-example/ @stripe/mx-mobile-reviewers
