--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,23 @@
-## For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-#
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx1024m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-#
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. For more details, visit
-# https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-# org.gradle.parallel=true
-#Fri Sep 06 11:35:54 EDT 2024
 GROUP=com.stripe
-POM_DEVELOPER_EMAIL=support+android@stripe.com
+
+POM_URL=https://github.com/stripe/stripe-android
+POM_SCM_URL=https://github.com/stripe/stripe-android
+POM_SCM_CONNECTION=scm:git@github.com/stripe/stripe-android.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com/stripe/stripe-android.git
+POM_LICENCE_NAME=The MIT License
+POM_LICENCE_URL=https://raw.githubusercontent.com/stripe/stripe-android/master/LICENSE
+POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=stripe
 POM_DEVELOPER_NAME=Stripe
-POM_LICENCE_DIST=repo
-POM_LICENCE_NAME=The MIT License
-POM_LICENCE_URL=https\://raw.githubusercontent.com/stripe/stripe-android/master/LICENSE
-POM_SCM_CONNECTION=scm\:git@github.com/stripe/stripe-android.git
-POM_SCM_DEV_CONNECTION=scm\:git@github.com/stripe/stripe-android.git
-POM_SCM_URL=https\://github.com/stripe/stripe-android
-POM_URL=https\://github.com/stripe/stripe-android
-VERSION_NAME=20.48.6
+POM_DEVELOPER_EMAIL=support+android@stripe.com
+
 android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=false
 android.enableR8.fullMode=true
-android.experimental.androidTest.numManagedDeviceShards=3
 android.nonFinalResIds=true
 android.nonTransitiveRClass=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+android.experimental.androidTest.numManagedDeviceShards=3
+
+# Update StripeSdkVersion.VERSION_NAME when publishing a new release
+VERSION_NAME=20.48.6
