Leverage set syntax

--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -8,12 +8,12 @@ apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 def testEnvironment = System.getenv("test_environment") ?: "production"
 
 emerge {
-    apiToken = System.getenv("EMERGE_API_KEY")
+    apiToken.set(System.getenv("EMERGE_API_KEY"))
 
     vcs {
         gitHub {
-            repoOwner = "EmergeTools"
-            repoName = "stripe-android"
+            repoOwner.set("EmergeTools")
+            repoName.set("stripe-android")
         }
     }
 }
