--- a/identity-example/build.gradle
+++ b/identity-example/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 assemble.dependsOn('lint')
 
 emerge {
-    apiToken = System.getenv("EMERGE_API_KEY")
+    apiToken.set(System.getenv("EMERGE_API_KEY"))
 
     vcs {
         gitHub {
-            repoOwner = "EmergeTools"
-            repoName = "stripe-android"
+            repoOwner.set("EmergeTools")
+            repoName.set("stripe-android")
         }
     }
 }
