--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -10,6 +10,10 @@ def testEnvironment = System.getenv("test_environment") ?: "production"
 emerge {
     apiToken.set(System.getenv("EMERGE_API_KEY"))
 
+    size {
+        tag.set(System.getenv("EMERGE_TAG"))
+    }
+
     vcs {
         gitHub {
             repoOwner.set("EmergeTools")
