--- a/paymentsheet-example/build.gradle
+++ b/paymentsheet-example/build.gradle
@@ -16,6 +16,10 @@ def getGooglePlacesApiKey() {
 emerge {
     apiToken.set(System.getenv("EMERGE_API_KEY"))
 
+    size {
+        tag.set(System.getenv("EMERGE_TAG"))
+    }
+
     vcs {
         gitHub {
             repoOwner.set("EmergeTools")
