--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,3 +23,7 @@
 # Financial Connections SDK
 /financial-connections/ @stripe/android-connections-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
 /financial-connections-example/ @stripe/android-connections-reviewers @stripe/android-sdk-reviewers @stripe/android-sdk-non-core-reviewers
+
+# Stripe Connect SDK
+/stripe-connect/ @stripe/mx-mobile-reviewers
+/stripe-connect-example/ @stripe/mx-mobile-reviewers
