--- a/3ds2sdk/gradle.properties
+++ b/3ds2sdk/gradle.properties
@@ -1,3 +1,4 @@
 # Update SdkVersion when publishing a new release
 VERSION_NAME=6.1.8
 STRIPE_ANDROID_NAMESPACE=com.stripe.android.stripe3ds2
+skip_dokka=true
