--- a/hcaptcha/build.gradle
+++ b/hcaptcha/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 
 dependencies {
     implementation libs.androidx.appCompat
+    implementation libs.androidx.core
     implementation libs.kotlin.serialization
 
     testImplementation testLibs.junit
