--- a/hcaptcha/build.gradle
+++ b/hcaptcha/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testImplementation testLibs.kotlin.test
     testImplementation testLibs.mockito.inline
     testImplementation testLibs.mockito.kotlin
+    testImplementation testLibs.robolectric
+    testImplementation testLibs.truth
 }
 
 android {
