--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -16,7 +16,7 @@ emerge {
 
     vcs {
         gitHub {
-            repoOwner.set("EmergeTools")
+            repoOwner.set("stripe")
             repoName.set("stripe-android")
         }
     }
