--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Upload Identity example release bundle to Emerge
         run: ./gradlew :identity-example:emergeUploadReleaseAab
         env:
-          EMERGE_API_KEY: ${{ secrets.EMERGE_API_KEY }}
+          EMERGE_API_TOKEN: ${{ secrets.EMERGE_API_KEY }}
           EMERGE_TAG: push
   upload-financial-connections:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
       - name: Upload Financial Connections example release bundle to Emerge
         run: ./gradlew :financial-connections-example:emergeUploadReleaseAab
         env:
-          EMERGE_API_KEY: ${{ secrets.EMERGE_API_KEY }}
+          EMERGE_API_TOKEN: ${{ secrets.EMERGE_API_KEY }}
           EMERGE_TAG: push
   upload-payment-sheet:
     runs-on: ubuntu-latest
@@ -36,5 +36,5 @@ jobs:
       - name: Upload Payment Sheet example release bundle to Emerge
         run: ./gradlew :paymentsheet-example:emergeUploadReleaseAab
         env:
-          EMERGE_API_KEY: ${{ secrets.EMERGE_API_KEY }}
+          EMERGE_API_TOKEN: ${{ secrets.EMERGE_API_KEY }}
           EMERGE_TAG: push
