--- a/identity-example/build.gradle
+++ b/identity-example/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 assemble.dependsOn('lint')
 
 emerge {
-    apiToken.set(System.getenv("EMERGE_API_KEY"))
+    // Api token is implicitly set to the EMERGE_API_TOKEN env variable
 
     size {
         tag.set(System.getenv("EMERGE_TAG"))
