--- a/paymentsheet-example/build.gradle
+++ b/paymentsheet-example/build.gradle
@@ -14,7 +14,7 @@ def getGooglePlacesApiKey() {
 }
 
 emerge {
-    apiToken.set(System.getenv("EMERGE_API_KEY"))
+    // Api token is implicitly set to the EMERGE_API_TOKEN env variable
 
     size {
         tag.set(System.getenv("EMERGE_TAG"))
