--- a/stripe-connect/src/main/AndroidManifest.xml
+++ b/stripe-connect/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application>
         <activity
             android:name=".EmbeddedComponentActivity"
+            android:theme="@style/Theme.AppCompat"
             android:exported="false" />
     </application>
 </manifest>
