--- a/paymentsheet-example/build.gradle
+++ b/paymentsheet-example/build.gradle
@@ -2,6 +2,7 @@ apply from: configs.androidApplication
 
 apply plugin: 'com.emergetools.android'
 apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
+apply plugin: "org.jetbrains.kotlin.plugin.parcelize"
 apply plugin: 'shot'
 
 // Read values from gradle.properties or system environment variable
