--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,7 @@ apiValidation {
             "stripe-connect-example",
             "screenshot-testing",
             "3ds2playground",
+            "dokka-stripe",
     ]
     nonPublicMarkers.add("androidx.annotation.RestrictTo")
     nonPublicMarkers.add("dagger.internal.DaggerGenerated")
