--- a/maestro/financial-connections/disabled/Testmode-PaymentIntent-TestInstitution-UnplannedDowntime.yaml
+++ b/maestro/financial-connections/disabled/Testmode-PaymentIntent-TestInstitution-UnplannedDowntime.yaml
@@ -17,11 +17,11 @@ tags:
 - tapOn:
     id: "consent_cta"
 # Select Down institution
-- tapOn: "Down bank (unscheduled)"
+- tapOn: "Down Bank (Unscheduled)"
 # Selecting another bank resets the flow
 - tapOn: "Select another bank"
 # Assert flow correctly returns to institution picker
-- tapOn: "Down bank (unscheduled)"
+- tapOn: "Down Bank (Unscheduled)"
 # Close flow from error page
 - tapOn: "Close icon"
 - scrollUntilVisible:
