--- a/financial-connections/build.gradle
+++ b/financial-connections/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation libs.compose.activity
     implementation libs.compose.foundation
     implementation libs.compose.material
+    implementation libs.compose.materialIcons
     implementation libs.compose.navigation
     implementation libs.compose.ui
     implementation libs.compose.uiToolingPreview
