--- a/maestro/financial-connections/Testmode-Data-TestOauthInstitution.yaml
+++ b/maestro/financial-connections/Testmode-Data-TestOauthInstitution.yaml
@@ -37,6 +37,10 @@ tags:
 - assertVisible: "Your accounts were connected."
 - tapOn:
     id: "done_button"
-- assertVisible: ".*Completed!.*"
-- assertVisible: ".*StripeBank.*"
+- scrollUntilVisible:
+    element:
+      text: ".*Completed.*"
+- scrollUntilVisible:
+    element:
+      text: ".*StripeBank.*"
 - stopRecording
